--- a/public_html/css/landing.css
+++ b/public_html/css/landing.css
@@ -1,386 +1,10 @@
-@charset "utf-8";
-/* CSS Document */
-
-
-input, select{
-	background-color:#CCC;
-	border-color:#CCC;
-	color:#333;
-	border-radius: 5px;
+.width-custom{
+	width:670px;	
+}
+p{
+	font-size:14px;	
 }
 
-span.one{
-	color: #FBB040;
-    font-family: Arial,Helvetica,sans-serif;
-    font-weight: bold;
-	text-align:left;
+.carousel-inner{
+	height:510px;	
 }
-
-span.two{
-	color: #FFFFFF;
-	font-family:Arial, Helvetica, sans-serif;
-	text-align: left;
-	font-size: 12px;
-}
-
-span.three{
-	color: #FFFFFF;
-	font-family:Arial, Helvetica, sans-serif;
-	text-align: left;
-	font-size: 16px;
-}
-
-span.four{
-	color:#000;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	text-align:left;
-}
-
-span.five{
-	color:#000;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	text-align:left;
-	font-weight:bold
-}
-
-span.six{
-	color: #FFFFFF;
-	font-family:Arial, Helvetica, sans-serif;
-	text-align: left;
-	font-size: 14px;
-}
-
-span.seven{
-	color: #333;
-	font-family:Arial, Helvetica, sans-serif;
-	text-align: left;
-	font-size: 14px;
-}
-
-a.nav{
-	padding-right: 10px;
-	padding-left: 10px;
-	text-decoration:none;
-	color:#000;
-}
-
-a.nav:hover{
-	padding-right: 10px;
-	padding-left: 10px;
-	text-decoration:none;
-	color:#FFFFFF;
-}
-
-a.whitelink{
-	color: #FFFFFF;
-	font-family:Arial, Helvetica, sans-serif;
-	text-align: left;
-	font-size: 12px;
-	text-decoration:underline;
-}
-
-input.two{
-	color: #333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	background-color: #FBB040;
-	border: none;
-	padding: 5px;
-	border-radius: 5px;
-}
-
-img.one{
-	padding-top: 7px;
-}
-
-body{
-	width: 100%;
-	max-width: 1366px;
-	background-color:#333;
-	background-repeat:no-repeat;
-	margin: 0px;
-	padding: 0px;
-	overflow:hidden;
-}
-
-#background{
-	width:100%;
-	position:absolute;
-	top: 0px;
-	left: 0px;
-}
-
-#wrapper{
-	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	z-index: 1;
-}
-
-#mainHeader{
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	z-index:1;
-	height:41px;
-	background-image:url(/img/flyfoenix_header.png);
-	background-repeat:repeat-x;
-}
-
-#logoHeader{
-	position: relative;
-	top: 0px;
-	left:0px;
-	width: 1367px;
-	height: 41px;
-	z-index: 2;
-}
-
-#caption{
-	position: relative;
-	top: 22px;
-	left: 330px;
-	z-index: 3;
-}
-
-#logoFlyFoenix{
-	position: absolute;
-	margin-top: 2px;
-	margin-left: 10px;
-	z-index: 3;
-}
-
-#bodyHeader{
-	margin-left: auto;
-    margin-right: auto;
-    margin-top: 70px;
-    position: relative;
-    width: 532px;
-    z-index: 5;
-	height:100px;
-	background-image:url(/img/landing/flyfoenix_landingpage_lightgraybig.png);
-	background-repeat:no-repeat;
-}
-
-#join{
-    
-    position: relative;
-    top:-25px;
-    left:75px;
-}
-
-
-/*Body Container Elements*/
-#bodyContainerDark{
-	position: relative;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: -20px;
-	
-	background-image:url(/img/landing/flyfoenix_landingpage_darkgray.png);
-	background-repeat:no-repeat;
-
-	height: 401px;
-	width: 532px;
-}
-
-#register{
-	
-	position:absolute;
-	z-index: 6;
-	
-	width: 215px;
-	height: 350px;
-	
-	margin-left:15px;
-	margin-top:15px;
-	
-	padding-left:15px;
-	padding-right:20px;
-	padding-top:10px;
-	
-	background-image:url(/img/landing/flyfoenix_landingpage_lightgraysmall.png);
-	background-repeat:no-repeat;
-}
-
-#registerimg{
-
-}
-
-#login{
-	
-   	position: absolute;
-   	top: 0px;
-   	right:25px;
-   	z-index: 6;
-	
-	width:215px;
-	height: 350px;
-	
-	margin-top:15px;
-	
-	padding-left:15px;
-	padding-right:18px;
-	padding-top:10px;
-	
-	background-image:url(/img/landing/flyfoenix_landingpage_lightgraysmall.png);
-	background-repeat:no-repeat;
-	
-}
-
-#loginimg{
-	padding-top:5px;
-}
-
-#fb1{
-	text-align:center;
-}
-
-.img-wrapper{
-	text-align:center;
-}
-.img-wrapper img{
-	padding:10px 0px;
-}
-form{
-	padding:0px;
-	margin:0px;
-	display:block;
-}
-#or2{
-	
-}
-.f-spacer{
-	height:10px;
-}
-#registerForm, #loginForm{
-	padding-left:10px;
-}
-#registerForm .fieldwidth, #loginForm .fieldwidth{
-	padding:5px;
-	width:170px;
-	border:none;
-	border:none;
-}
-#email{
-
-}
-
-#birthdate{
-
-}
-
-#gender{
-	
-}
-
-#tradio{
-	
-}
-
-
-#male{
-	padding-left:10px;
-}
-#female{
-	padding-left:10px;
-}
-
-#school{
-}
-
-
-#fb2{
-	text-align:center;
-}
-
-#email2{
-}
-
-#birthdate2{
-}
-
-#btnregister, #btnlogin{
-	float: right;
-	margin-right:25px;
-	cursor:pointer;
-}
-
-#rememberme{
-	text-align:right;
-	margin-top:40px;
-	margin-right:25px;
-}
-
-#sliderwrapper{
-	
-}
-
-#slider{
-	
-}
-
-#grayline{
-	padding-top:9px;
-	padding-bottom: 9px;
-	padding-left: 5px;
-}
-
-#bottomContainer{
-	background-image: url("/img/landing/flyfoenix_landingpage_darkgraybottom.png");
-    	background-repeat: no-repeat;
-
-    	margin-left: auto;
-    	margin-right: auto;
-    	margin-top: -30px;
-
-    	width: 532px;
-    	height:155px;
-    	
-	font-weight:bold;
-	position:relative;
-	z-index:7;
-}
-
-#tellfriends{
-	margin-left: 20px;
-	margin-top:15px;
-}
-
-#offer{
-	margin-left: 30px;
-	margin-top: -10px;
-}
-
-#sharethis{
-	margin-left: 25px;
-	margin-top: 7px;
-	height:40px;
-}
-
-#sharetag{
-	float: right;
-    margin-right: -10px;
-    margin-top: -160px;
-}
-#navigate{
-    position:relative;
-    top:7px;
-    left:0px;
-    
-    margin-left:auto;
-    margin-right:auto;
-    width:950px;
-    
-    text-align:right; 
-}
-	
-/*End Body Container Elements*/
-
-	
