--- a/public_html/css/viewer.css
+++ b/public_html/css/viewer.css
@@ -180,3 +180,18 @@ body{
 	text-align:right;
 	padding:5px 10px 0px 0px;	
 }
+
+.size-table{
+	width:100%;
+	border:solid #666 2px;
+	background-color:#EEE;
+}
+.size-table TD{
+	padding:5px;	
+}
+.size-title{
+	font-weight:bold;
+	color:#fff;
+	background-color:#333;
+	text-align:right;
+}
