--- a/public_html/css/shop.css
+++ b/public_html/css/shop.css
@@ -5,7 +5,7 @@
 .sale.info{
 	display:inline;
 	float:left;
-	padding:10px 0px 10px 10px;
+	padding:10px;
 }
 .sale.expire .text{
 	color:#CCC;	
@@ -13,7 +13,7 @@
 .sale.expire{
 	float:right;
 	display:inline;	
-	padding:10px 10px 10px 0px;
+	padding:10px;
 	color:#FFF;
 	font-style:normal;
 }
